--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -2,8 +2,8 @@
 
      @tailwind utilities;
 
-     @tailwind base;
-@tailwind components;
+     /* @tailwind base;
+@tailwind components; */
 
 
 :root {
